<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menuFragments.ProfileFragment"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Profile"
        android:textColor="@color/white"
        android:textSize="25dp"/>
    <LinearLayout
        android:layout_width="375dp"
        android:layout_height="600dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <TextView
                android:text="Profile Picture:"
                android:textColor="@color/form_blue"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
            <ImageView
                android:src="@drawable/baseline_person_24"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_width="50dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change/Add Picture"
                android:backgroundTint="@color/form_blue"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/form_blue"
                android:text="Username:"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="johndoe"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/form_blue"
                android:text="Email:"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:text="johndoe@email.com"/>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Player Statistics"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Games played:"
                    android:textColor="@color/form_blue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalGames"
                    android:text="110"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wins:"
                    android:textColor="@color/form_blue"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totalWins"
                    android:text="55"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Losses:"
                    android:textColor="@color/form_blue"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/totaLosses"
                    android:text="55"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Win%"
                    android:textColor="@color/form_blue"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gamePercentage"
                    android:text="50%"/>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="Game Statistics"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/koznazna"
                    android:textColor="@color/form_blue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/koznaznaStats"
                    android:text="30"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spojnice"
                    android:textColor="@color/form_blue"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spojniceStats"
                    android:text="11"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asocijacije"
                    android:textColor="@color/form_blue"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/asocijacijeStats"
                    android:text="44"/>

            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skocko"
                    android:textColor="@color/form_blue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/skockoStats"
                    android:text="24"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/korakpokorak"
                    android:textColor="@color/form_blue"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/korakpokorakStats"
                    android:text="13"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mojbroj"
                    android:textColor="@color/form_blue"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/mojbrojStats"
                    android:text="29"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logout"
                android:backgroundTint="@color/form_blue"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>